Add QR code to website

--- a/program.tex
+++ b/program.tex
@@ -28,19 +28,16 @@
 
 \begin{document}
 
-% The header is divided into two boxes:
-% The first is 75% wide and houses the title, subtitle, names, university/organization and contact information
-% The second is 25% wide and houses a logo for your university/organization or a photo of you
-% The widths of these boxes can be easily edited to accommodate your content as you see fit
+\includegraphics{img/qr_code.jpg}
+http://www.cs.huji.ac.il/~danielh/iscol2017
 
 \begin{center}
 	\veryHuge \color{NavyBlue} \textbf{The 2017 Israel Seminar of Computational
 Linguistics}
 \end{center}
 
-\vspace{1cm} % A bit of extra whitespace between the header and poster content
+\vspace{1cm}
 \titlespacing*{\section}{0pt}{8mm}{5mm}
-%\titlespacing*{\paragraph}{0pt}{3mm}{5mm}
 
 \includegraphics{img/huji_banner.png}
 \includegraphics{img/cse_banner.png}
