Fix poster in PDF too

--- a/iscol2017.tex
+++ b/iscol2017.tex
@@ -282,7 +282,7 @@
         Chaya Liebeskind and Yaakov Hacohen-Kerner
         \item
         \textbf{Detection of Native Language Based on Micro Messages}\\
-        Oren Tsur, Yohay Nahari and Maayan Matook
+        Yohay Nahari, Maayan Matook and Oren Tsur
         \item
         \textbf{Causal Factors of Language Change Under Control - the Case of Frequency Bias in Laws of Semantic
         Change}\\
